# webrtcexample

./: .gitignore  CMakeLists.txt  README.md  client.js  dummy_a_device.h  dummy_audio_device.cpp  dummy_audio_device.h  fftest.cpp  fftest.h  frame_manipulation_example_main.cpp  main.cpp  main_2.cpp  package-lock.json  package.json  signaling-server.js  vcpkg.json
client/: index.html
